<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="settings_app_version">Version</string>
    <string name="settings_app_version_summary">v%1$s (%2$d)</string>

    <string name="settings_data_saver_title">Data saver</string>
    <string name="settings_data_saver_summary_on">Fetch data less often and display lower quality images</string>
    <string name="settings_data_saver_summary_system">Automatically enabled due to system setting</string>

    <string name="settings_title">Settings</string>
    <string name="settings_ui_category_title">User Interface</string>
    <string name="settings_theme_title">Theme</string>

    <string name="settings_about_category_title">About AppTemplate</string>
    <string name="view_privacy_policy">View Privacy Policy</string>
</resources>