<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/settings_ui_category_title">

        <ListPreference
            android:icon="@drawable/ic_theme"
            android:defaultValue="@string/pref_theme_default_value"
            android:entries="@array/prefs_theme_titles"
            android:entryValues="@array/prefs_theme_values"
            android:key="pref_theme"
            android:title="@string/settings_theme_title" />

        <SwitchPreference
            android:key="pref_data_saver"
            android:defaultValue="false"
            android:title="@string/settings_data_saver_title"
            android:summaryOn="@string/settings_data_saver_summary_on" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="about_category"
        android:title="@string/settings_about_category_title">

        <Preference
            android:key="privacy_policy"
            android:title="@string/view_privacy_policy" />

        <Preference
            android:key="version"
            android:title="@string/settings_app_version" />

    </PreferenceCategory>

</PreferenceScreen>